--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ data/*
 # But don't ignore the drive-me-not/ subdirectory
 !data/drive-me-not/
 
-# exclude pycache
+# exclude pycache and wandb directories
 __pycache__/
 *.pyc
+
+*wandb/
